# analytic_nl_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  load_data.py  main.py  mistral_7b_model.py  prompt_mistral.py  pyproject.toml  test_model.py
database/: database.py  load_data.py
docker/: entrypoint.sh
llm/: mistral_client.py  ollama_client.py  prompt_manager copy.py  prompt_manager.py  prompt_manager_english.py
migrations/: env.py
migrations/versions/: 7b9c886c25fe_create_videos_and_snapshots_tables.py
sql_queries/: drop_table.sql
src/: main.py
src/bot/: bot.py
src/bot/core/: models.py
src/database/: connection.py  fix_aggregation.py  security.py
src/tools/: load_data.py
